<resources>
    <string name="app_name">AgroSync</string>
    <string name="emailLabel">Email:</string>
    <string name="passwordLabel">Senha:</string>
    <string name="registerHere">Não tem conta?\n   Clique aqui!</string>
    <string name="signInHere">Tem uma conta?\n   Clique aqui!</string>
    <string name="joinText">Entrar</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agrosync_logo">AgroSync Logo</string>
    <string name="registerText">Cadastrar-se</string>
    <string name="newResourceTitle">Novo Insumo</string>
    <string name="cancel_text">Cancelar</string>
    <string name="save_text">Salvar</string>
    <string name="select_img">Selecionar Imagem</string>
    <string name="resource_desc_input_hint">Descreva o insumo</string>
    <string name="description_label">Descrição:</string>
    <string name="weight_input_hint">Peso do insumo</string>
    <string name="weight_label">Peso:</string>
    <string name="amount_input_hint">Quantidade do insumo</string>
    <string name="amaunt_label">Quantidade:</string>
    <string name="measure_unit_hint">Unidade de Medida:</string>
    <string name="category_label">Categoria:</string>
    <string name="name_input_hint">Nome do insumo</string>
    <string name="name_label">Nome:</string>
    <string name="title">Título</string>
    <string name="title_hint">título</string>
    <string name="operacao">Operação</string>
    <string name="value">Valor</string>
    <string name="valor_hint">valor</string>
    <string name="description">Descrição</string>
    <string name="description_hint">Descrição do insumo</string>
    <string name="date">Data</string>
    <string name="edit_transaction">Editar Transação</string>
    <string name="resource_title">Insumos</string>
    <string name="resource_detail_title">Detalhes do Insumo</string>
    <string name="add_resource_desc">Adicionar mais quandidade desse Recurso</string>
    <string name="edit_resource_desc">Editar esse insumo</string>
    <string name="cost_label">Custo:</string>
    <string name="titulo_da_financia">Título da Financia</string>
    <string name="data">Data:</string>
    <string name="operation_detail">Operação:</string>
    <string name="measure_unit_label">Un. Medida:</string>
    <string name="amount_label">Quantidade:</string>
    <string name="value_label">Valor:</string>
    <string name="value_hint">Valor do Insumo</string>
    <string name="date_label">Data:</string>
    <string name="date_hint">Selecione a data</string>
    <string name="go_to_resource">Ver Insumo</string>
    <string name="financial_title">Financeiro</string>
    <string name="historical_title">Histórico de Insumos</string>
</resources>