<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.inventory.AddResourceFragment"
    android:layout_marginTop="75dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragment.inventory.ResourceCreateFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">
    <LinearLayout
        android:id="@+id/resourceAddTitleBackground"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:minWidth="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/light_gray_bg"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tvResourceAddTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/textPrimaryColor"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/resource_detail_title"
            android:layout_weight="1"/>
    </LinearLayout>
        <TextView
            android:id="@+id/tvMeasureUnitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measure_unit_label"
            android:textColor="@color/textPrimaryColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resourceAddTitleBackground"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"/>
        <LinearLayout
            android:id="@+id/tvMeasureUnitBackground"
            android:layout_width="220dp"
            android:layout_height="42dp"
            app:layout_constraintTop_toBottomOf="@id/resourceAddTitleBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvMeasureUnitLabel"
            android:background="@color/light_gray_bg"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:id="@+id/tvMeasureUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/textPrimaryColor"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Quilos e Gramas"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvMeasureUnitLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_label"
                android:textSize="20sp"
                android:textColor="#1970E2"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/amount_input_hint"
                    android:background="#E9E9E9"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/amountContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvMeasureUnitLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_label"
                android:textSize="20sp"
                android:textColor="#1970E2"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etAmount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:hint="@string/amount_input_hint"
                    android:background="#E9E9E9"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/operationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/amountContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operacao"
                android:textSize="20sp"
                android:textColor="#1970E2"/>
            <Spinner
                android:id="@+id/spinnerOperations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/valueContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/operationContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_label"
                android:textSize="20sp"
                android:textColor="#1970E2"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:hint="@string/value_hint"
                    android:background="#E9E9E9"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dateContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/descriptionContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_label"
                android:textSize="20sp"
                android:textColor="#1970E2"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    android:hint="@string/date_hint"
                    android:background="#E9E9E9"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/descriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/valueContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:textSize="20sp"
                android:textColor="#1970E2"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/description_hint"
                    android:background="#E9E9E9"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/actionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/dateContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#56D6FB"
                android:text="@string/cancel_text"
                android:textSize="26sp"
                android:layout_gravity="center|start"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#56D6FB"
                android:text="@string/save_text"
                android:textSize="26sp"
                android:layout_gravity="center|end"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actionContainer"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>